# ReLife

./: .gitignore  CLAUDE.md  HOW_IT_WORKS.md  LICENSE  MODULE_DEEP_DIVE.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
relife/: __init__.py  agent.py  cli.py  config.py  hooks.py  permissions.py
relife/memory/: __init__.py  _text.py  client.py  cognitive.py  consolidate.py  embeddings.py  events.py  rem.py  server.py  service.py  skills.py  store.py  vector_index.py  workflows.py
relife/prompts/: rem.md  system.md
scripts/: bench_recall.py
tests/: conftest.py  test_build_resume.py  test_build_server.py  test_cognitive.py  test_consolidate.py  test_events.py  test_hook_recall.py  test_ledger.py  test_memory_service.py  test_permissions.py  test_rem.py  test_semantic_memory.py  test_skills.py  test_store.py  test_store_v2.py  test_vector_index.py  test_workflows.py
