[project]
name = "relife"
version = "0.1.0"
description = "A personal agent that acts through MCP and learns over time."
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.2.105",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
# Local, offline semantic recall (ONNX, no API key). Soft-optional: memory
# degrades to keyword + activation recall when this isn't installed.
#   pip install -e ".[embeddings]"
embeddings = [
    "fastembed>=0.3",
]
# Local ANN vector index for semantic recall at large scale (sqlite-vec is a
# loadable SQLite extension; offline, no API key). Soft-optional: recall falls
# back to the brute-force cosine scan when this isn't installed or can't load.
#   pip install -e ".[vector]"
vector = [
    "sqlite-vec>=0.1",
]

[project.scripts]
relife = "relife.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["relife"]
